fix(data-viewer): change z-index of globe and legend

--- a/src/scripts/components/layers/layer-legend/layer-legend.module.styl
+++ b/src/scripts/components/layers/layer-legend/layer-legend.module.styl
@@ -4,7 +4,7 @@
   position: absolute
   top: 50%
   left: emCalc(22px)
-  z-index: 1
+  z-index: 2
   display: flex
   flex-direction: row
   height: 40%
